--- a/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
+++ b/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
@@ -1,12 +1,59 @@
-# Use the official lightweight Python image.
-# https://hub.docker.com/_/python
-FROM python:3.9-slim
+# Pull base image.
+FROM ubuntu:latest
 
 # Allow statements and log messages to immediately appear in the Cloud Run logs
 ENV PYTHONUNBUFFERED True
 
+RUN \
+# Update
+apt-get update -y && \
+# Install Unzip
+apt-get install unzip -y && \
+# need wget
+apt-get install wget -y && \
+# vim
+apt-get install vim -y
+
+################################
+# Install Terraform
+################################
+
+# Download terraform for linux
+RUN wget https://releases.hashicorp.com/terraform/0.11.11/terraform_0.11.11_linux_amd64.zip
+
+# Unzip
+RUN unzip terraform_0.11.11_linux_amd64.zip
+
+# Move to local bin
+RUN mv terraform /usr/local/bin/
+# Check that it's installed
+RUN terraform --version 
+
+################################
+# Install python
+################################
+
+RUN apt-get install -y python3-pip
+#RUN ln -s /usr/bin/python3 python
+RUN pip3 install --upgrade pip
+RUN python3 -V
+RUN pip --version
 # Install python packages
-RUN pip install flask boto3 botocore requests gunicorn requests-aws4auth
+RUN pip install flask boto3 botocore requests gunicorn
+
+################################
+# Install AWS CLI
+################################
+RUN pip install awscli --upgrade --user
+
+# add aws cli location to path
+ENV PATH=~/.local/bin:$PATH
+
+# Adds local templates directory and contents in /usr/local/terrafrom-templates
+ADD templates /usr/local/bin/templates
+
+RUN mkdir ~/.aws && touch ~/.aws/credentials
+
 
 # Copy local code to the container image.
 ENV APP_HOME /
