changed base image to terraform official image

--- a/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
+++ b/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
@@ -1,5 +1,5 @@
 # Pull base image.
-FROM ubuntu:latest
+FROM hashicorp/terraform:latest
 
 # Allow statements and log messages to immediately appear in the Cloud Run logs
 ENV PYTHONUNBUFFERED True
@@ -18,16 +18,18 @@ apt-get install vim -y
 # Install Terraform
 ################################
 
-# Download terraform for linux
-RUN wget https://releases.hashicorp.com/terraform/0.11.11/terraform_0.11.11_linux_amd64.zip
+# # Download terraform for linux
+# RUN wget https://releases.hashicorp.com/terraform/0.11.11/terraform_0.11.11_linux_amd64.zip
 
-# Unzip
-RUN unzip terraform_0.11.11_linux_amd64.zip
+# # Unzip
+# RUN unzip terraform_0.11.11_linux_amd64.zip
 
-# Move to local bin
-RUN mv terraform /usr/local/bin/
-# Check that it's installed
-RUN terraform --version 
+# # Move to local bin
+# RUN mv terraform /usr/local/bin/
+# # Check that it's installed
+ RUN terraform --version 
+# Adds local templates directory and contents in /usr/local/terrafrom-templates
+# ADD templates /usr/local/bin/templates
 
 ################################
 # Install python
@@ -48,9 +50,6 @@ RUN pip install awscli --upgrade --user
 
 # add aws cli location to path
 ENV PATH=~/.local/bin:$PATH
-
-# Adds local templates directory and contents in /usr/local/terrafrom-templates
-ADD templates /usr/local/bin/templates
 
 RUN mkdir ~/.aws && touch ~/.aws/credentials
 
