changed base image to terraform official image

--- a/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
+++ b/aws-perpetual-range/aws-perpetual-range-app/Dockerfile
@@ -1,47 +1,22 @@
-# Pull base image.
-FROM hashicorp/terraform:latest
+FROM docker.mirror.hashicorp.services/golang:alpine
+LABEL maintainer="HashiCorp Terraform Team <terraform@hashicorp.com>"
 
-# Allow statements and log messages to immediately appear in the Cloud Run logs
-ENV PYTHONUNBUFFERED True
+RUN apk add --no-cache git bash openssh
+RUN apk add python3-pip
 
-RUN \
-# Update
-apt-get update -y && \
-# Install Unzip
-apt-get install unzip -y && \
-# need wget
-apt-get install wget -y && \
-# vim
-apt-get install vim -y
-
-################################
-# Install Terraform
-################################
-
-# # Download terraform for linux
-# RUN wget https://releases.hashicorp.com/terraform/0.11.11/terraform_0.11.11_linux_amd64.zip
-
-# # Unzip
-# RUN unzip terraform_0.11.11_linux_amd64.zip
-
-# # Move to local bin
-# RUN mv terraform /usr/local/bin/
-# # Check that it's installed
- RUN terraform --version 
-# Adds local templates directory and contents in /usr/local/terrafrom-templates
-# ADD templates /usr/local/bin/templates
-
-################################
-# Install python
-################################
-
-RUN apt-get install -y python3-pip
-#RUN ln -s /usr/bin/python3 python
 RUN pip3 install --upgrade pip
 RUN python3 -V
 RUN pip --version
 # Install python packages
 RUN pip install flask boto3 botocore requests gunicorn
+
+ENV TF_DEV=true
+ENV TF_RELEASE=1
+
+WORKDIR $GOPATH/src/github.com/hashicorp/terraform
+COPY . .
+RUN /bin/bash ./scripts/build.sh
+
 
 ################################
 # Install AWS CLI
@@ -53,12 +28,10 @@ ENV PATH=~/.local/bin:$PATH
 
 RUN mkdir ~/.aws && touch ~/.aws/credentials
 
-
 # Copy local code to the container image.
 ENV APP_HOME /
 WORKDIR $APP_HOME
 COPY . ./
-
 
 # Run the web service on container startup.
 # Use gunicorn webserver with one worker process and 8 threads.
