--- a/aws-proxy-app/cloudbuild.yaml
+++ b/aws-proxy-app/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
       - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
       - .
       - '-f'
-      - ../../Dockerfile
+      - ./aws-proxy-app/Dockerfile
     id: Build
   - name: gcr.io/cloud-builders/docker
     args:
