--- a/aws-proxy-app/cloudbuild.yaml
+++ b/aws-proxy-app/cloudbuild.yaml
@@ -38,7 +38,7 @@ substitutions:
   _PLATFORM: managed
   _SERVICE_NAME: aws-proxy-app
   _LABELS: gcb-trigger-id=$BUILD_ID
-  _DEFAULT_CB_SA: service-$PROJECT_NUMBER@gcp-sa-cloudbuild.iam.gserviceaccount.com
+  _DEFAULT_CB_SA: cloudbuild-deploy-cloudrun-sa@$PROJECT_ID.iam.gserviceaccount.com
   _DEPLOY_REGION: us-central1
   _GCR_HOSTNAME: us.gcr.io
 tags:
