removed commit sha from image naming

--- a/aws-proxy-app/cloudbuild.yaml
+++ b/aws-proxy-app/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
     id: Deploy
     entrypoint: gcloud
 images:
-  - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+  - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME'
 options:
   substitutionOption: ALLOW_LOOSE
 substitutions:
