--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,7 +1,7 @@
 site_name: DEtection Replay Framework
 site_url: 
-repo_url: 
-repo_name: 
+repo_url: https://github.com/vectra-ai-research/derf-vectra-private
+repo_name: DeRF
 plugins:
   - search
   - awesome-pages
@@ -11,12 +11,12 @@ theme:
   favicon: 
   palette:
     - scheme: default
-      primary: deep-purple
+      primary: green
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
     - scheme: slate
-      primary: deep-purple
+      primary: green
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
@@ -26,6 +26,7 @@ theme:
   - navigation.top
   - navigation.tabs
   - navigation.tabs.sticky
+  - content.code.copy
   icon:
     admonition:
       note: octicons/tag-16
