--- a/env-prod/TEMPLATE.conf
+++ b/env-prod/TEMPLATE.conf
@@ -1,7 +1,6 @@
 ##########################################################################################
 # Enter these values to complete your terraform backend configuration
-# Running a remote backend to an encrypted bucket is recommended as AWS Access Keys
-# Are generated during Terraform Apply and will be retained in State
+# When complete, rename this file derf.conf
 ##########################################################################################
 region         = "" 
 profile        = ""
