--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -86,12 +86,16 @@ nav:
       - Frequently Asked Questions: faq.md
       - DeRF vs. Other Tools: comparison.md
       - Contributing: contributing.md
-  - User Guide:
+  - Deployment:
+      - DeRF Deployment: Deployment/derf-deployment.md  
+      - Deployment Permissions: Deployment/deployment-permissions.md  
+  - Attack Execution:
       - Getting Started: user-guide/getting-started.md
       - Examples: user-guide/examples.md
-      - Usage: user-guide/usage.md
-      - Troubleshooting: user-guide/troubleshooting.md
-      - Programmatic Usage: user-guide/programmatic-usage.md
+      - Executing An Attack: user-guide/usage.md
+      - Programmatic Execution: user-guide/programmatic-usage.md
+      - DeRF User Permissions: user-guide/execution-user-permissions.md
+      - Troubleshooting Execution: user-guide/troubleshooting.md      
   - Attack Techniques Reference:
       - All Attack Techniques: attack-techniques/list.md
       - Philosophy: attack-techniques/philosophy.md
