--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,4 +1,4 @@
-site_name: DEtection Replay Framework
+site_name: Detection Replay Framework
 site_url: 
 repo_url: https://github.com/vectra-ai-research/derf
 repo_name: DeRF
