--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -88,7 +88,8 @@ nav:
       - Contributing: contributing.md
   - Deployment:
       - DeRF Deployment: Deployment/derf-deployment.md  
-      - Deployment Permissions: Deployment/deployment-permissions.md  
+      - Deployment Permissions: Deployment/deployment-permissions.md
+      - Connect To Github: Deployment/connect-to-github-repo.md
   - User Guide:
       - Getting Started: user-guide/getting-started.md
       - Executing An Attack: user-guide/usage.md
