refactor reducing the number of variables deployment operators need to submit

--- a/env-prod/TEMPLATE.conf
+++ b/env-prod/TEMPLATE.conf
@@ -2,6 +2,6 @@
 # Enter these values to complete your terraform backend configuration
 # When complete, rename this file derf.conf
 ##########################################################################################
-region         = "" 
-profile        = ""
+
+## Encrypted S3 bucket to store terraform state. This is required as AWS Access Keys are generated during deployment.  The secret values will persist in state.
 bucket         = ""
