added gh action for deployment to artifactory

--- a/.github/workflows/gh-action.yaml
+++ b/.github/workflows/gh-action.yaml
@@ -49,7 +49,7 @@ on:
 env:
   PROJECT_ID: "derf-artifact-registry-public"
   GAR_LOCATION: "us"
-  SERVICE: "ProxyApp"
+  SERVICE: "proxyapp"
 
 jobs:
   deploy:
