--- a/.github/workflows/gh-action.yaml
+++ b/.github/workflows/gh-action.yaml
@@ -49,7 +49,7 @@ on:
 env:
   PROJECT_ID: "derf-artifact-registry-public"
   GAR_LOCATION: "us"
-  SERVICE: "proxyapp"
+  SERVICE: "aws-proxy-app"
 
 jobs:
   deploy:
