--- a/.github/workflows/gh-action.yaml
+++ b/.github/workflows/gh-action.yaml
@@ -92,7 +92,7 @@ jobs:
       - name: Build and Push Container
         run: |-
           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" . -f ./aws-proxy-app/Dockerfile
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/proxyapp:${{ github.sha }}"
 
       # END - Docker auth and build
 
