added workflow to build docs automagically

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,8 +1,12 @@
 name: build
 on:
+  workflow_dispatch: {} 
   push:
     branches:
       - main
+    paths:
+      - "docs/**"
+      - mkdocs.yaml
 jobs:
   deploy:
     runs-on: ubuntu-latest
