added region to backend config template

--- a/env-prod/TEMPLATE.conf
+++ b/env-prod/TEMPLATE.conf
@@ -5,3 +5,4 @@
 
 ## Encrypted S3 bucket to store terraform state. This is required as AWS Access Keys are generated during deployment.  The secret values will persist in state.
 bucket         = ""
+region         = ""
