--- a/gcloud-app/Dockerfile
+++ b/gcloud-app/Dockerfile
@@ -6,7 +6,7 @@ FROM python:3.9-slim
 ENV PYTHONUNBUFFERED True
 
 # Install python packages
-RUN pip install flask requests gunicorn shutil subprocess
+RUN pip install flask requests gunicorn
 
 
 RUN apt-get update && apt-get upgrade -y
