--- a/gcloud-app/Dockerfile
+++ b/gcloud-app/Dockerfile
@@ -18,11 +18,12 @@ RUN curl https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.tar.gz > /tm
 
 # Installing gcloud
 RUN mkdir -p /usr/local/gcloud \
-  && tar -C /usr/local/gcloud -xvfp /tmp/google-cloud-sdk.tar.gz \
+  && tar -C /usr/local/gcloud -xvf /tmp/google-cloud-sdk.tar.gz \
   && /usr/local/gcloud/google-cloud-sdk/install.sh --quiet 
 
 # Adding the gcloud path to local
 ENV PATH $PATH:/usr/local/gcloud/google-cloud-sdk/bin
+RUN chmod -R 777 /usr/local/gcloud/google-cloud-sdk/bin
 
 
 # Copy local code to the container image.
